# nrg

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-cleaning.ipynb  02-exploring.ipynb
src/nrg/: __init__.py
